[Healthcheck] Fixes #3543 Prevent shift of Admin Menu

--- a/src/module-elasticsuite-core/view/adminhtml/web/css/source/_module.less
+++ b/src/module-elasticsuite-core/view/adminhtml/web/css/source/_module.less
@@ -49,17 +49,18 @@ fieldset.radioset-tooltip {
 }
 
 .smile_elasticsuite-healthcheck-index {
-    .data-grid tbody tr:nth-child(odd) td {
-        background-color: #ffffff; /* White */
-    }
+    .data-grid {
+        tbody tr:nth-child(odd) td {
+            background-color: #ffffff; /* White */
+        }
+        tbody tr:nth-child(even) td {
+            background-color: #f5f5f5; /* Light gray */
+        }
 
-    .data-grid tbody tr:nth-child(even) td {
-        background-color: #f5f5f5; /* Light gray */
-    }
-
-    ul {
-        li {
-            margin-left:1em;
+        ul {
+            li {
+                margin-left:1em;
+            }
         }
     }
 }
